force-app/main/default/objects/Training_Credential_Evidence__c/Training_Credential_Evidence__c.object-meta.xml
<CustomObject>
    <description>Evidence supporting Learning Credentials that can be earned.</description>
    <label>Training Credential Evidence</label>
    <nameField>
        <displayFormat>TCE-{0000}</displayFormat>
        <label>Training Credential Evidence Name</label>
        <type>AutoNumber</type>
    </nameField>    
    <pluralLabel>Training Credential Evidence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>