force-app/main/default/objects/Training_Credential_Evidence__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date Evidence was approved.</description>
    <inlineHelpText>If applicable, the date the User approved this Evidence towards a Training Credential.</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>