force-app/main/default/objects/Training_Credential_Evidence__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description>Notes recorded on Approval of the Evidence</description>
    <label>Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>