force-app/main/default/objects/Training_Credential_Evidence__c/fields/Approved_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Id of the Approver.</description>
    <inlineHelpText>The Contact Id of the Approver.</inlineHelpText>
    <label>Approved By (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Credential Evidence (Approver)</relationshipLabel>
    <relationshipName>Training_Credential_Evidence_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>