force-app/main/default/objects/Training_Credential_Evidence__c/fields/Approved_By_User__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Id of the Approver.</description>
    <inlineHelpText>The User Id of the Approver.</inlineHelpText>
    <label>Approved By (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Training Credential Evidence (Approver)</relationshipLabel>
    <relationshipName>Training_Credential_Evidence_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>