force-app/main/default/objects/Training_Credential_Evidence__c/fields/Experience_Date__c.field-meta.xml
<CustomField>
    <fullName>Experience_Date__c</fullName>
    <description>Experience Date.</description>
    <inlineHelpText>Date Evidence was experienced.</inlineHelpText>
    <label>Experience Date</label>
    <type>Date</type>
</CustomField>