force-app/main/default/objects/Training_Credential_Evidence__c/fields/Field_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_Of_Study__c</fullName>
    <description>Field_Of_Study</description>
    <inlineHelpText>The Field of Study</inlineHelpText>
    <label>Field Of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>