force-app/main/default/objects/Training_Credential_Evidence__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student participating in this Training Credential.</description>
    <inlineHelpText>The student participating in this Training Credential.</inlineHelpText>
    <label>Learner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Credential Evidence</relationshipLabel>
    <relationshipName>Training_Credential_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>