force-app/main/default/objects/Training_Credential_Evidence__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>For Narrative Type Evidence</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>