force-app/main/default/objects/Training_Credential_Evidence__c/fields/Notes_to_Learner__c.field-meta.xml
<CustomField>
    <fullName>Notes_to_Learner__c</fullName>
    <description>Notes to the Learner, if any.</description>
    <label>Notes to Learner</label>
    <type>TextArea</type>
</CustomField>