force-app/main/default/objects/Training_Credential_Evidence__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Submitted Date</description>
    <inlineHelpText>Submitted Date.</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>