force-app/main/default/objects/Training_Credential_Evidence__c/fields/Training_Credential__c.field-meta.xml
<CustomField>
    <fullName>Training_Credential__c</fullName>
    <description>Lookup to the Training Credential this Evidence supports.</description>
    <label>Training Credential</label>
    <referenceTo>Training_Credential__c</referenceTo>
    <relationshipLabel>Training Credential Evidence</relationshipLabel>
    <relationshipName>Training_Credential_Evidence</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>