force-app/main/default/objects/Training_Credential_Evidence__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>A URL referencing the evidence for the Training Credential.</description>
    <externalId>true</externalId>
    <inlineHelpText>A URL referencing the evidence for the Training Credential.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>